--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -89,6 +89,8 @@ dependencies:
   # DB
   drift: ^2.23.1
   drift_flutter: ^0.2.4
+  cronet_http: ^1.5.0
+  cupertino_http: ^2.3.0
 
 dev_dependencies:
   flutter_test:
